--- a/README.me
+++ b/README.me
@@ -9,8 +9,7 @@ LICENSE:
 Choose an appropriate open-source license for your project. Common choices include MIT, Apache 2.0, and GNU GPL. You can use websites like choosealicense.com to help you pick a license.
 Additional Files:
 
-If your project includes any configuration files, scripts, or other resources, make sure they're included in the repository.
-You might also include a .gitignore file to specify which files and directories should be ignored by Git.
+
 Here's a basic example of how your directory structure might look
 your-project/
 ├── README.md
@@ -22,19 +21,6 @@ Install dependencies:
 
 
 git clone https://github.com/ETHERUM-WALLETS-FORCE-CRACK.git
-
+for new telegram bot https://telegram.me/BotFather
 npm install
-Usage
-Describe how to use your project here.
 
-Contributing
-If you'd like to contribute to this project, you can follow these steps:
-
-Fork the repository.
-Create a new branch (git checkout -b feature/new-feature).
-Make your changes.
-Commit your changes (git commit -am 'Add new feature').
-Push to the branch (git push origin feature/new-feature).
-Create a new Pull Request.
-License
-This project is licensed under the License Name - see the LICENSE file for details.
