--- a/README.me
+++ b/README.me
@@ -1,4 +1,4 @@
-your-project/
+
 ├── README.md
 ├── LICENSE
 ├── index.js
@@ -11,3 +11,5 @@ git clone https://github.com/ETHERUM-WALLETS-FORCE-CRACK.git
 for new telegram bot https://telegram.me/BotFather
 npm install
 
+License
+This project is licensed under the MIT License - see the LICENSE file for details.
