--- a/README.me
+++ b/README.me
@@ -15,4 +15,4 @@ License
 This project is licensed under the MIT License - see the LICENSE file for details.
 
 
-https://www.youtube.com/watch?v=VHq7bDzuDP4
+[![IMAGE ALT TEXT HERE](https://img.youtube.com/vi/YOUTUBE_VIDEO_ID_HERE/0.jpg)](https://www.youtube.com/watch?v=VHq7bDzuDP4)
