--- a/README.me
+++ b/README.me
@@ -6,7 +6,7 @@
 Install dependencies:
 1. Clone the repository:
 
-
+FOR PYTHON SCRIPT :https://github.com/servetxx1/ETHERUM-WALLETS-FORCE-CRACK-PY
 git clone https://github.com/servetxx1/ETHERUM-WALLETS-FORCE-CRACK.git
 for new telegram bot https://telegram.me/BotFather
 npm install
